# multicam

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: tests.yml
.github/workflows/: tests.yml
data/params/: tng300-1-table.csv
multicam/: __init__.py  base.py  cam.py  models.py  multicam.py  plotting.py  qt.py  train.py
multicam/tng/: utils.py
notebooks/exploratory/: N(a)-medians.ipynb  aerosp.ipynb  andrews-fits.ipynb  base-distributions.ipynb  cartoon.ipynb  check-ma-am.ipynb  check-quantile-transform.ipynb  check-subhalo-snapshots.ipynb  correlation-mah.ipynb  current.ipynb  diffmah-ranks-no-ranks.ipynb  diffmah_curve_preds.ipynb  diffmah_curves.ipynb  extract-MM-scale.ipynb  fit-predicted-alpha.ipynb  gaussian_prediction.ipynb  inverse-predict-metrics.ipynb  kllr-play.ipynb  latex-works.ipynb  merger-tree-info.ipynb  model-metrics.ipynb  mpeak_errs.ipynb  multicam-is-cam-in-1d.ipynb  overview.ipynb  pred-am-vs-m.ipynb  prediction-alpha.ipynb  prediction-gradients.ipynb  predictions-backup-02_08_22.ipynb  predictions-backup-05_01_21.ipynb  triangle.ipynb
notebooks/wip/: debug-predictions-08-28-23.ipynb  low-ranks-high-ranks.ipynb  merger-prediction-peak.ipynb  merger-prediction-with-train-test-split.ipynb  merger-prediction.ipynb  minimal-break-multicam.ipynb  phil-new-merger-figure-xgboost.ipynb  phil-new-merger-figure.ipynb  tng-100-explore.ipynb  tng-simple.ipynb  tng4.ipynb  tng5.ipynb  xgboost-demo-with-multicam.ipynb  xgboost-demo.ipynb
results/figs/: triangle_corrs_table.txt
results/figs/cache/: forward_pred_metrics.npy  inv_pred_metrics.npy  predict_mah.npy  triangle.npy
tests/: test_multicam.py  test_qt.py  test_ranks.py
